--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-fluentui-emoji": "^0.0.7"
+    "react-fluentui-emoji": "^0.0.7",
+    "slugify": "^1.6.6"
   },
   "devDependencies": {
     "@types/node": "^20",
