--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.0.20",
     "material-symbols": "^0.17.0",
     "next": "14.1.3",
     "react": "^18",
