--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ariakit/react": "^0.4.4",
+    "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
     "material-symbols": "^0.17.0",
     "next": "14.1.3",
