--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@ariakit/react": "^0.4.4",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
+    "immer": "^10.0.4",
     "material-symbols": "^0.17.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
     "react-fluentui-emoji": "^0.0.7",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
