--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@ariakit/react": "^0.4.4",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.20",
     "immer": "^10.0.4",
     "material-symbols": "^0.17.0",
     "next": "14.1.3",
+    "next-auth": "^5.0.0-beta.17",
     "react": "^18",
     "react-dom": "^18",
     "react-fluentui-emoji": "^0.0.7",
     "slugify": "^1.6.6",
     "use-debounce": "^10.0.0",
+    "zod": "^3.23.8",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
