--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-fluentui-emoji": "^0.0.7",
+    "sharp": "^0.33.3",
     "slugify": "^1.6.6",
     "zustand": "^4.5.2"
   },
